--- a/build.gradle
+++ b/build.gradle
@@ -187,7 +187,7 @@ dependencies {
     implementation 'org.modelmapper:modelmapper:2.4.4'
     implementation 'org.apache.kafka:kafka-clients:2.8.0'
     implementation "org.springframework.boot:spring-boot-starter-data-redis"
-
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
     // api documentation
     implementation 'org.springdoc:springdoc-openapi-ui:1.5.10'
 
